# ceyquest

./: README.md  index.html  index__.html  tailwind.config.ts
backend/: .env  README.md  pyproject.toml  requirements.txt
backend/app/: ai_service.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: ai_chat.py  auth.py  dashboard.py  quizzes.py  subjects.py
public/: index.html
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/components/layout/: Layout.tsx  Navigation.tsx
src/components/ui/: button.tsx
src/pages/: CeynovX.tsx  Dashboard.tsx  Index.tsx  Leaderboard.tsx  Onboarding.tsx  Quiz.tsx  Settings.tsx  Subjects.tsx
src/types/: index.ts
